<?xml version="1.0"?>
<package format="3">
  <name>cpp_3nos</name>
  <version>0.0.0</version>
  <description>Pacote com 3 nós simples em C++</description>
  <maintainer email="gabriel@todo.todo">gabriel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
